src/test/ui/feature-gates/feature-gate-feature-gate.stderr
error: unstable feature
  --> $DIR/feature-gate-feature-gate.rs:2:12
   |
LL | #![feature(intrinsics)]
   |            ^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/feature-gate-feature-gate.rs:1:11
   |
LL | #![forbid(unstable_features)]
   |           ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

